# nasa_space_app_2025

./: .gitignore  pyproject.toml  readme.md
app_interface/: qtquickcontrols2.conf  weather.py  weather.qml  weather.qrc  weather.spec  weather_rc.py
app_interface/qml/: LoadingPage.qml  WeatherPage.qml
backend/: utils.py  weather_bridge.py  weather_forecast.py  weather_historic.py
